--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,15 @@
 
 name = "sequence_trie"
 version = "0.0.10"
+description = "Trie-like data-structure for storing sequences of values."
 
+license = "GPL-3.0+"
 authors = ["Michael Sproul <micsproul@gmail.com>"]
 
-description = "Trie-like data-structure for storing sequences of values."
-documentation = "http://sproul.io/rust/sequence_trie/"
+documentation = "https://michaelsproul.github.io/rust_sequence_trie/"
 repository = "https://github.com/michaelsproul/rust_sequence_trie"
-readme = "README.md"
+
 keywords = ["trie", "tree", "hash", "data-structure", "collection"]
-license = "GPL-3.0+"
 
 [lib]
 
