List Alex as an author in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Trie-like data-structure for storing sequences of values."
 
 license = "MIT"
-authors = ["Michael Sproul <micsproul@gmail.com>"]
+authors = ["Michael Sproul <micsproul@gmail.com>", "Alex Gulyás <gulyas.alex@gmail.com>"]
 
 documentation = "https://michaelsproul.github.io/rust_sequence_trie/"
 repository = "https://github.com/michaelsproul/rust_sequence_trie"
