Let serde automatically derive De/serialize implementations
Signed-off-by: Johannes Löthberg <johannes@kyriasis.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ name = "sequence_trie"
 
 [features]
 btreemap = []
+
+[dependencies]
+serde = { version = "^1.0", optional = true, features = ["derive"] }
