--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ btreemap = []
 
 [dependencies]
 serde = { version = "^1.0", optional = true, features = ["derive"] }
+
+[dev-dependencies]
+serde_json = "^1.0"
