--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ serde = { version = "^1.0", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 serde_json = "^1.0"
+
+[[example]]
+name = "json"
+required-features = ["serde"]
